<resources>
    <string name="app_name">My Application</string>
    <string name="android_studio">Android Studio</string>
    <string name="Order">Order</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="quantity">Quantity</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="phone_number">Phone Number</string>
</resources>